--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="app_logo_bottom">Can Zhang</string>
     <string name="app_version_info">Version 2.0.0\nCopyright © 2013 Tom\n</string>
     <string name="game">Game Screen</string>
-    <string name="scores">Scores Screen</string>
+    <string name="scores">Scores</string>
     <string name="settings">Settings Screen</string>
     <string name="help">Help Screen</string>
     
@@ -16,5 +16,15 @@
     <string name="menu_item_play">Play Game</string>
     <string name="menu_item_scores">View Scores</string>
     <string name="menu_item_help">Help</string>
+    
+    <!-- scores screen -->
+	<string name="all_scores">All Scores</string>
+	<string name="friends_scores">Scores of Friends</string>
+	<string name="no_scores">No scores to show.</string>
+	<string name="username">Username</string>
+	<string name="rank">Ranking</string>
+	<string name="score">Score</string>
+	<string name="wait_msg">Retrieving Scores...</string>
+	<string name="wait_title">Loading...</string>
 
 </resources>
